# s21_3DViewer

./: .gitmodules
src/: Makefile
src/3DViewer/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/modules/: modules.h  parser.c  transformations.c
src/tests/: tests.c
